remove mutability